--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,17 +21,17 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v4
 
+            - name: Enable Corepack
+              run: corepack enable
+
             - name: Setup Node
               uses: actions/setup-node@v4
               with:
                   node-version: 20
                   cache: yarn
 
-            - name: Enable Corepack
-              run: corepack enable
-
             - name: Install dependencies
-              run: yarn install --frozen-lockfile
+              run: yarn install --immutable
 
             - name: Build
               run: yarn build
