--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,7 +20,9 @@ jobs:
         steps:
             - uses: actions/checkout@v4
 
-            - run: corepack enable
+            - run: |
+                  npm install -g corepack@0.20.0 --force
+                  corepack enable
 
             - uses: actions/setup-node@v4
               with:
