--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,17 +20,15 @@ jobs:
         steps:
             - uses: actions/checkout@v4
 
-            - run: |
-                  npm install -g corepack@0.20.0 --force
-                  corepack enable
-
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: 22
+            - run: corepack enable
             - uses: actions/setup-node@v4
               with:
                   node-version: 22
                   cache: yarn
-
-            - name: Install dependencies
-              run: yarn install --immutable
+            - run: yarn install --immutable
 
             - name: Build
               run: yarn build
