--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,7 +23,10 @@ jobs:
             - uses: actions/setup-node@v4
               with:
                   node-version: 22
-            - run: corepack enable
+            - run: |
+                  npm uninstall -g yarn pnpm
+                  npm install -g corepack
+                  corepack enable
             - uses: actions/setup-node@v4
               with:
                   node-version: 22
