--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,17 +20,13 @@ jobs:
         steps:
             - uses: actions/checkout@v4
 
-            - uses: actions/setup-node@v4
-              with:
-                  node-version: 22
-            - run: |
-                  npm uninstall -g yarn pnpm
-                  npm install -g corepack
-                  corepack enable
+            - run: corepack enable
+
             - uses: actions/setup-node@v4
               with:
                   node-version: 22
                   cache: yarn
+
             - run: yarn install --immutable
 
             - name: Build
