--- a/package.json
+++ b/package.json
@@ -41,5 +41,6 @@
         "typescript-eslint": "^8.44.0",
         "vite": "^7.1.7",
         "vite-tsconfig-paths": "^5.1.4"
-    }
+    },
+    "packageManager": "yarn@4.10.3"
 }
