--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "react-icons": "^5.5.0",
+        "react-markdown": "^10.1.0",
         "tailwind-merge": "^3.3.1",
         "tailwind-variants": "^3.1.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.36.0",
+        "@tailwindcss/typography": "^0.5.19",
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
         "@types/masonry-layout": "^4.2.8",
         "@types/react": "^19.1.13",
